Only encrypt secrets to ease inspection of ops variables

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "update-cookie-extension": "src/modules/Scraper/i-dont-care-about-cookies/tools/copy-to-folder.sh",
     "precommit": "echo \"No need for precommit yet\"",
     "precommit2": "(git diff --diff-filter=AM --name-only --staged | grep ops/roles/ota/github-clone/vars/ | xargs grep -rL \"ANSIBLE\") && echo \"some vault files are not encrypted\" && exit",
-    "encrypt": "grep -rL \"ANSIBLE\" ./ops/roles/ota/github-clone/vars/* | xargs ansible-vault encrypt",
-    "decrypt": "grep -rl \"ANSIBLE\" ./ops/roles/ota/github-clone/vars/* | xargs ansible-vault decrypt",
+    "encrypt": "grep -rL \"ANSIBLE\" ./ops/roles/ota/github-clone/vars/*.secrets.yml | xargs ansible-vault encrypt",
+    "decrypt": "grep -rl \"ANSIBLE\" ./ops/roles/ota/github-clone/vars/*.secrets.yml | xargs ansible-vault decrypt",
     "deploy:vagrant:preproduction": "ansible-playbook ops/site.yml -v -i ops/inventories/dev.yml -e \"ENV=vagrant-preproduction\" -vvv",
     "deploy:vagrant:production": "ansible-playbook ops/site.yml -v -i ops/inventories/dev.yml -e \"ENV=vagrant-production\" -vvv",
     "deploy:preproduction": "ansible-playbook ops/site.yml -v -i ops/inventories/production.yml -e \"ENV=preproduction\" -vvv",
