Simplify npm scripts for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "OpenTermsArchive.org",
+  "name": "ota-contribution-tool",
   "version": "1.24.0",
   "prettier": "prettier-config-ambanum",
   "scripts": {
@@ -12,14 +12,12 @@
     "precommit2": "(git diff --diff-filter=AM --name-only --staged | grep ops/roles/ota/github-clone/vars/ | xargs grep -rL \"ANSIBLE\") && echo \"some vault files are not encrypted\" && exit",
     "encrypt": "grep -rL \"ANSIBLE\" ./ops/roles/ota/github-clone/vars/*.secrets.yml | xargs ansible-vault encrypt",
     "decrypt": "grep -rl \"ANSIBLE\" ./ops/roles/ota/github-clone/vars/*.secrets.yml | xargs ansible-vault decrypt",
-    "deploy:vagrant:preproduction": "ansible-playbook ops/site.yml -v -i ops/inventories/dev.yml -e \"ENV=vagrant-preproduction\" -vvv",
-    "deploy:vagrant:production": "ansible-playbook ops/site.yml -v -i ops/inventories/dev.yml -e \"ENV=vagrant-production\" -vvv",
+    "deploy:vagrant": "ansible-playbook ops/site.yml -v -i ops/inventories/dev.yml -e \"ENV=vagrant\" -vvv",
     "deploy:preproduction": "ansible-playbook ops/site.yml -v -i ops/inventories/production.yml -e \"ENV=preproduction\" -vvv",
     "deploy:production": "ansible-playbook ops/site.yml -v -i ops/inventories/production.yml -e \"ENV=production\" -vvv",
-    "docker:build:preproduction": "docker build -t opentermsarchive.org . --build-arg ENV_FILE=.env.local.preproduction",
-    "docker:build:production": "docker build -t opentermsarchive.org . --build-arg ENV_FILE=.env.local.production",
-    "docker:run": "(docker rm opentermsarchive.org || true) && docker run --rm -p 3000:3000 --name opentermsarchive.org -it opentermsarchive.org",
-    "docker:ssh": "docker exec -it opentermsarchive.org /bin/sh",
+    "docker:build": "docker build -t ota-contribution-tool . --build-arg ENV_FILE=.env",
+    "docker:run": "(docker rm ota-contribution-tool || true) && docker run --rm -p 3000:3000 --name ota-contribution-tool -it ota-contribution-tool",
+    "docker:ssh": "docker exec -it ota-contribution-tool /bin/sh",
     "i18n": "yarn i18n:extract && yarn i18n:clean && echo '\n⚠️  You may need to restart your dev server\n'",
     "i18n:extract": "NODE_ENV=development i18next-scanner --config 'src/modules/I18n/i18next-scanner.config.js'",
     "i18n:clean": "find src/translations -size 3c -delete",
@@ -35,6 +33,7 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
     "debug": "^4.3.1",
+    "dotenv": "^11.0.0",
     "express": "^4.17.1",
     "fs-extra": "10.0.0",
     "http-status-codes": "^2.1.4",
