--- a/ops/inventories/production.yml
+++ b/ops/inventories/production.yml
@@ -1,8 +1,21 @@
 all:
+  vars:
+    ansible_python_interpreter: /usr/bin/python3 # Needed or it fails with 'Failed to import the required Python library'
+    ansible_user: debian
+    repository: 'https://github.com/OpenTermsArchive/contribution-tool.git'
+    ansible_host: 51.75.169.235
+    branch: 'main'
   children:
-    dev:
+    preprod:
       hosts:
-        51.75.169.235:
-          ansible_user: debian
-          ansible_ssh_extra_args: -o StrictHostKeyChecking=no
-          ansible_python_interpreter: /usr/bin/python3 # Needed or it fails with 'Failed to import the required Python library'
+        preproduction:
+          branch: 'develop'
+          directory: 'ota-contribute-preproduction'
+          port: '7024'
+          env_directory: '.env.preproduction'
+    prod:
+      hosts:
+        production:
+          directory: 'ota-contribute-production'
+          port: '7023'
+          env_directory: '.env.production'
