--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "start": "NODE_ENV=production node dist/src/server/index.js",
     "type-check": "tsc",
     "update-cookie-extension": "src/modules/Scraper/i-dont-care-about-cookies/tools/copy-to-folder.sh",
-    "precommit": "echo \"No need for precommit yet\"",
-    "precommit2": "(git diff --diff-filter=AM --name-only --staged | grep ops/roles/ota/github-clone/vars/ | xargs grep -rL \"ANSIBLE\") && echo \"some vault files are not encrypted\" && exit",
-    "encrypt": "grep -rL \"ANSIBLE\" ./ops/roles/ota/github-clone/vars/*.secrets.yml | xargs ansible-vault encrypt",
-    "decrypt": "grep -rl \"ANSIBLE\" ./ops/roles/ota/github-clone/vars/*.secrets.yml | xargs ansible-vault decrypt",
-    "deploy:vagrant": "ansible-playbook ops/site.yml -v -i ops/inventories/dev.yml -e \"ENV=vagrant\" -vvv",
-    "deploy:preproduction": "ansible-playbook ops/site.yml -v -i ops/inventories/production.yml -e \"ENV=preproduction\" -vvv",
-    "deploy:production": "ansible-playbook ops/site.yml -v -i ops/inventories/production.yml -e \"ENV=production\" -vvv",
+    "encrypt": "grep -rL \"ANSIBLE\" ./ops/roles/*/*/files/{.env.*.*,.env.*}/.env.secrets| sort -u  | xargs ansible-vault encrypt",
+    "decrypt": "grep -rl \"ANSIBLE\" ./ops/roles/*/*/files/{.env.*.*,.env.*}/.env.secrets| sort -u  | xargs ansible-vault decrypt",
+    "deploy:vagrant": "ansible-playbook ops/site.yml -i ops/inventories/dev.yml --limit vagrant -vvv",
+    "deploy:preproduction": "ansible-playbook ops/site.yml -i ops/inventories/production.yml --limit preproduction -vvv",
+    "deploy:production": "ansible-playbook ops/site.yml -i ops/inventories/production.yml  --limit production -vvv",
     "docker:build": "docker build -t ota-contribution-tool . --build-arg ENV_FILE=.env",
     "docker:run": "(docker rm ota-contribution-tool || true) && docker run --rm -p 3000:3000 --name ota-contribution-tool -it ota-contribution-tool",
     "docker:ssh": "docker exec -it ota-contribution-tool /bin/sh",
