--- a/package.json
+++ b/package.json
@@ -23,28 +23,28 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.3",
+    "@headlessui/react": "^1.5.0",
     "@socialgouv/matomo-next": "^1.2.1",
     "@svgr/webpack": "^5.5.0",
     "accept-language": "^3.0.18",
-    "autoprefixer": "^10.2.6",
-    "axios": "^0.21.1",
+    "autoprefixer": "^10.4.2",
+    "axios": "^0.26.0",
     "classnames": "^2.3.1",
-    "dayjs": "^1.10.7",
+    "dayjs": "^1.10.8",
     "debug": "^4.3.1",
     "dotenv": "^11.0.0",
     "express": "^4.17.1",
-    "fs-extra": "10.0.0",
-    "http-status-codes": "^2.1.4",
+    "fs-extra": "^10.0.1",
+    "http-status-codes": "^2.2.0",
     "lodash": "^4.17.21",
     "next": "^12.0.4",
     "next-i18next": "^9.2.0",
     "next-mdx-remote": "^3.0.2",
     "nprogress": "^0.2.0",
-    "octokit": "^1.3.0",
-    "postcss": "^8.3.0",
+    "octokit": "^1.7.1",
+    "postcss": "^8.4.8",
     "postcss-animation": "^0.0.12",
-    "postcss-calc": "^8.0.0",
+    "postcss-calc": "^8.2.4",
     "postcss-custom-media": "^8.0.0",
     "postcss-custom-properties": "^11.0.0",
     "postcss-easings": "^3.0.1",
@@ -55,41 +55,41 @@
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-recaptcha": "^3.5.0",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
-    "query-string": "^7.0.0",
+    "query-string": "^7.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.11.1",
-    "react-icons": "^4.2.0",
+    "react-hook-form": "^7.27.1",
+    "react-icons": "^4.3.1",
     "react-toastify": "^7.0.4",
-    "react-use": "17.2.4",
+    "react-use": "^17.3.2",
     "swr": "0.5.6",
     "ts-replace-all": "^1.0.0",
-    "user-agents": "^1.0.948"
+    "user-agents": "^1.0.949"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/debug": "^4.1.5",
     "@types/express": "4.17.13",
-    "@types/fs-extra": "^9.0.11",
-    "@types/jest": "27.0.1",
-    "@types/lodash": "^4.14.171",
+    "@types/fs-extra": "^9.0.13",
+    "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.179",
     "@types/node": "16.7.1",
     "@types/nprogress": "^0.2.0",
     "@types/query-string": "^6.3.0",
-    "@types/react": "17.0.19",
-    "@types/react-dom": "17.0.9",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.13",
     "@types/react-icons": "^3.0.0",
     "@types/user-agents": "^1.0.2",
-    "fast-glob": "^3.2.5",
+    "fast-glob": "^3.2.11",
     "i18next-scanner": "^3.1.0",
     "i18next-scanner-typescript": "^1.0.6",
-    "jest": "27.0.6",
-    "prettier": "^2.2.1",
+    "jest": "^27.5.1",
+    "prettier": "^2.5.1",
     "prettier-config-ambanum": "^1.0.1",
-    "ts-jest": "27.0.5",
-    "ts-node": "10.2.1",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
-    "typescript": "4.3.5"
+    "typescript": "^4.6.2"
   },
   "license": "MIT",
   "browserslist": [
