--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.25.0",
   "prettier": "prettier-config-ambanum",
   "scripts": {
-    "dev": "NODE_OPTIONS=\"--insecure-http-parser --max-http-header-size=3276\" ts-node --project tsconfig.server.json src/server/index.ts",
-    "build": "cp -R src/translations/en src/translations/default && next build --debug && tsc --project tsconfig.server.json && rm -Rf src/translations/default",
-    "start": "NODE_ENV=production node dist/src/server/index.js",
+    "dev": "NODE_OPTIONS=\"--insecure-http-parser --max-http-header-size=3276 \" ts-node src/server/index.mjs",
+    "build": "cp -R src/translations/en src/translations/default && next build --debug && tsc && rm -Rf src/translations/default",
+    "start": "NODE_ENV=production node dist/src/server/index.mjs",
     "type-check": "tsc",
     "update-cookie-extension": "src/modules/Scraper/i-dont-care-about-cookies/tools/copy-to-folder.sh",
     "encrypt": "grep -rL \"ANSIBLE\" ./ops/roles/*/*/files/{.env.*.*,.env.*}/.env.secrets| sort -u  | xargs ansible-vault encrypt",
