--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,15 +11,16 @@
     "lib": ["dom", "es2019"],
     "module": "esnext",
     "moduleResolution": "node",
-    "noEmit": true,
+    "noEmit": false,
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "outDir": "./dist",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
     "target": "esnext"
   },
   "exclude": ["node_modules"],
-  "include": ["**/*.ts", "**/*.tsx", "additional.d.ts"]
+  "include": ["**/*.ts", "**/*.tsx", "additional.d.ts", "**/*.mjs"]
 }
