--- a/package.json
+++ b/package.json
@@ -64,8 +64,7 @@
     "react-toastify": "^8.2.0",
     "react-use": "^17.3.2",
     "swr": "^1.2.2",
-    "ts-replace-all": "^1.0.0",
-    "user-agents": "^1.0.949"
+    "ts-replace-all": "^1.0.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -80,7 +79,6 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "@types/react-icons": "^3.0.0",
-    "@types/user-agents": "^1.0.2",
     "fast-glob": "^3.2.11",
     "i18next-scanner": "^3.1.0",
     "i18next-scanner-typescript": "^1.0.6",
