Add infra ansible to deploy node puppeteer and pm2

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "encrypt": "grep -rL \"ANSIBLE\" ./ops/roles/*/*/files/{.env.*.*,.env.*}/.env.secrets| sort -u  | xargs ansible-vault encrypt",
     "decrypt": "grep -rl \"ANSIBLE\" ./ops/roles/*/*/files/{.env.*.*,.env.*}/.env.secrets| sort -u  | xargs ansible-vault decrypt",
     "deploy:vagrant": "ansible-playbook ops/site.yml -i ops/inventories/dev.yml --limit vagrant -vvv",
-    "deploy:preproduction": "ansible-playbook ops/site.yml -i ops/inventories/production.yml --limit preproduction -vvv",
-    "deploy:production": "ansible-playbook ops/site.yml -i ops/inventories/production.yml  --limit production -vvv",
+    "deploy:preproduction": "ansible-playbook ops/app.yml -i ops/inventories/production.yml --limit preproduction -vvv",
+    "deploy:production": "ansible-playbook ops/app.yml -i ops/inventories/production.yml  --limit production -vvv",
     "docker:build": "docker build -t ota-contribution-tool . --build-arg ENV_FILE=.env",
     "docker:run": "(docker rm ota-contribution-tool || true) && docker run --rm -p 3000:3000 --name ota-contribution-tool -it ota-contribution-tool",
     "docker:ssh": "docker exec -it ota-contribution-tool /bin/sh",
