--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-mixins": "^9.0.2",
     "postcss-nesting": "^10.1.3",
+    "puppeteer": "14.3.0",
+    "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-recaptcha": "^3.5.0",
     "query-string": "^7.1.1",
     "react": "17.0.2",
