--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "NODE_ENV=production node dist/src/server/index.mjs",
     "type-check": "tsc",
     "update-cookie-extension": "src/modules/Scraper/i-dont-care-about-cookies/tools/copy-to-folder.sh",
-    "encrypt": "grep -rL \"ANSIBLE\" ./ops/roles/*/*/files/{.env.*.*,.env.*}/.env.secrets| sort -u  | xargs ansible-vault encrypt",
-    "decrypt": "grep -rl \"ANSIBLE\" ./ops/roles/*/*/files/{.env.*.*,.env.*}/.env.secrets| sort -u  | xargs ansible-vault decrypt",
+    "encrypt": "grep -rL \"ANSIBLE\" ./ops/roles/*/files/{.env.*.*,.env.*}/.env.secrets| sort -u  | xargs ansible-vault encrypt",
+    "decrypt": "grep -rl \"ANSIBLE\" ./ops/roles/*/files/{.env.*.*,.env.*}/.env.secrets| sort -u  | xargs ansible-vault decrypt",
     "deploy:vagrant": "ansible-playbook ops/site.yml -i ops/inventories/dev.yml --limit vagrant -vvv",
     "deploy:preproduction": "ansible-playbook ops/app.yml -i ops/inventories/production.yml --limit preproduction -vvv",
     "deploy:production": "ansible-playbook ops/app.yml -i ops/inventories/production.yml  --limit production -vvv",
