--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "strict": true,
     "target": "esnext"
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "dist"],
   "include": ["**/*.ts", "**/*.tsx", "additional.d.ts", "**/*.mjs"]
 }
