Fix nextjs version
in newer version 12.2.0 an error is raised because of a dprecated feature
this error makes the deployment fail
Let's fix to previous version to prevent a ninja commit

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "fs-extra": "^10.0.1",
     "http-status-codes": "^2.2.0",
     "lodash": "^4.17.21",
-    "next": "^12.1.6",
+    "next": "12.1.6",
     "next-i18next": "^9.2.0",
     "next-mdx-remote": "^3.0.2",
     "nprogress": "^0.2.0",
