Reorganize ops and make it deployable standalone

--- a/ops/infra.yml
+++ b/ops/infra.yml
@@ -3,5 +3,6 @@
   hosts: all
   become: yes
 
-  roles:
-    - infra
+- import_playbook: playbooks/infra/common.yml
+- import_playbook: playbooks/infra/git.yml
+- import_playbook: playbooks/infra/node.yml
