--- a/ops/roles/apps/contribution-tool/tasks/main.yml
+++ b/ops/roles/apps/contribution-tool/tasks/main.yml
@@ -18,6 +18,10 @@
     dest: '/home/{{ ansible_user }}/{{ directory }}/.env'
     remote_src: False
 
+- name: Install pm2
+  command: npm install -g pm2 --production=true
+  become: true
+
 - name: Verify if app already exists
   shell: pm2 list | grep {{ directory }} | awk '{print $2}'
   register: APP_ALREADY_EXISTS
