--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "encrypt": "grep -rL \"ANSIBLE\" ./ops/roles/*/files/{.env.*.*,.env.*}/.env.secrets| sort -u  | xargs ansible-vault encrypt",
     "decrypt": "grep -rl \"ANSIBLE\" ./ops/roles/*/files/{.env.*.*,.env.*}/.env.secrets| sort -u  | xargs ansible-vault decrypt",
     "deploy:vagrant": "ansible-playbook ops/site.yml -i ops/inventories/dev.yml --limit vagrant -vvv",
-    "deploy:preproduction": "ansible-playbook ops/app.yml -i ops/inventories/production.yml --limit preproduction -vvv",
-    "deploy:production": "ansible-playbook ops/app.yml -i ops/inventories/production.yml  --limit production -vvv",
+    "deploy:preproduction": "ansible-playbook ops/site.yml -i ops/inventories/production.yml --diff --limit preproduction -vvv",
+    "deploy:production": "ansible-playbook ops/site.yml -i ops/inventories/production.yml  --limit production -vvv",
     "i18n": "yarn i18n:extract && yarn i18n:clean && echo '\n⚠️  You may need to restart your dev server\n'",
     "i18n:extract": "NODE_ENV=development i18next-scanner --config 'src/modules/I18n/i18next-scanner.config.js'",
     "i18n:clean": "find src/translations -size 3c -delete",
