Download external ansible roles in user's folder
Copied from disinfo.quaidorsay.fr-ops
This way, installed role racqspace.unattended_upgrades is not added to
ops/roles folder and thus not taken into account by git

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 
 inventory = ops/inventories/dev.yml
-roles_path = ops/roles
+roles_path = ~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles:ops/roles
 
 
 # The two following lines allow to have human readable output
