--- a/.github/workflows/deploy-preprod.yml
+++ b/.github/workflows/deploy-preprod.yml
@@ -29,6 +29,7 @@ jobs:
       - run: pip install --upgrade setuptools
       - run: pip install ansible==2.9.11
       - run: ansible-galaxy collection install community.general:==1.3.5
+      - run: ansible-galaxy install -r ops/requirements.yml
       # Preproduction
       - name: Deploy on preproduction
         run: npm run deploy:preproduction
