Install pm2 in infra instead of directly in app ops

--- a/ops/roles/infra/node/tasks/main.yml
+++ b/ops/roles/infra/node/tasks/main.yml
@@ -16,3 +16,6 @@
 
 - name: Update Npm to latest version
   command: npm install -g npm
+
+- name: Install pm2
+  command: npm install -g pm2 --production=true
