--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -23,5 +23,6 @@ jobs:
       - run: pip install --upgrade setuptools
       - run: pip install ansible==2.9.11
       - run: ansible-galaxy collection install community.general:==1.3.5
+      - run: ansible-galaxy install -r ops/requirements.yml
       - name: Deploy on production
         run: npm run deploy:production
