Generate file name (ID) from name

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.17.1",
     "fs-extra": "^10.0.1",
     "http-status-codes": "^2.2.0",
+    "latinize": "^0.5.0",
     "lodash": "^4.17.21",
     "next": "12.1.6",
     "next-i18next": "^9.2.0",
@@ -68,6 +69,7 @@
     "@types/express": "4.17.13",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.4.1",
+    "@types/latinize": "^0.2.15",
     "@types/lodash": "^4.14.179",
     "@types/node": "16.7.1",
     "@types/nprogress": "^0.2.0",
