--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Validate typescript
+name: Validate typescript and test
 
 on:
   push:
@@ -18,5 +18,6 @@ jobs:
           node-version: 16.x
       - name: Install dependencies
         run: npm ci
+      - run: npm test
       - name: Typecheck
         uses: andoshin11/typescript-error-reporter-action@v1.0.2
