--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.3",
     "react-toastify": "^8.2.0",
     "react-use": "^17.3.2",
     "swr": "^1.2.2",
