--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "12.1.6",
     "next-i18next": "^9.2.0",
     "next-mdx-remote": "^3.0.2",
+    "next-translate": "^1.6.0",
     "nprogress": "^0.2.0",
     "octokit": "^1.7.1",
     "open-terms-archive": "github:ambanum/OpenTermsArchive",
