--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "http-status-codes": "^2.2.0",
     "latinize": "^0.5.0",
     "lodash": "^4.17.21",
-    "next": "12.1.6",
+    "next": "^12.3.1",
     "next-mdx-remote": "^4.1.0",
     "next-translate": "^1.6.0",
     "nprogress": "^0.2.0",
