--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@types/debug": "^4.1.5",
     "@types/express": "4.17.13",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^29.2.2",
     "@types/latinize": "^0.2.15",
     "@types/lodash": "^4.14.179",
     "@types/node": "16.7.1",
@@ -76,10 +76,11 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-icons": "^3.0.0",
     "fast-glob": "^3.2.11",
-    "jest": "^27.5.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.5.1",
     "prettier-config-ambanum": "^1.0.1",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.7.0",
     "tslint": "^6.1.3",
     "typescript": "^4.6.2"
